--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --text-logo: #000000;
   --text-hero: #ffffff;
   --team-background-color: #f5f4fa;
+  --footer-background-color: #2F303A;
 }
 
 body {
@@ -621,7 +622,7 @@ img {
 
 .footer {
   height: 252px;
-  background-color: #2f303a;
+  background-color: var(--footer-background-color);
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -703,6 +704,61 @@ img {
   background-color: var(--active-text-color);
 }
 
+/* Форма для подписки в футере */
+
+.field-button {
+  display: flex;
+  margin-top: 20px;
+}
+
+.subscribe {
+  margin-left: 13px;
+  margin-top: 12px;
+}
+
+.field-form {
+  margin-right: 12px;
+}
+
+.field {
+  display: block;
+  height: 50px;
+  width: 358px;
+  padding: 15px;
+
+  background-color: var(--footer-background-color);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.subscribe-button {
+  display: flex;
+  align-items: center;
+  width: 200px;
+  padding-left: 28px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: transparent;
+
+  color: var(--text-hero);
+  background-color: var(--active-text-color);
+
+  cursor: pointer;
+}
+
+.subscribe-text {
+  margin-right: 10px;
+
+  font-weight: 700;
+font-size: 16px;
+line-height: 1.88;
+letter-spacing: 0.06em;
+
+}
+
 /* Модальное окно */
 
 .backdrop {
@@ -736,12 +792,24 @@ img {
 
   width: 528px;
   height: 581px;
+  padding: 40px;
+
+  text-align: center;
 
   transform: translate(-50%, -50%) scale(0.9);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   background-color: var(--text-hero);
   border-radius: 4px;
+}
+
+.modal-title-text {
+  font-weight: 700;
+font-size: 20px;
+line-height: 1.15;
+letter-spacing: 0.03em;
+
+color: var(--primary-text-color)
 }
 
 .close {
@@ -755,6 +823,10 @@ img {
   border-radius: 50%;
 
   cursor: pointer;
+}
+
+.close-button:hover {
+  fill: var(--active-text-color);
 }
 
 /* Сброс отступов для заголовков и абзацев */
