--- a/css/styles.css
+++ b/css/styles.css
@@ -716,11 +716,11 @@ img {
   margin-top: 12px;
 }
 
-.field-form {
+.form {
   margin-right: 12px;
 }
 
-.field {
+.field-input {
   display: block;
   height: 50px;
   width: 358px;
@@ -794,8 +794,6 @@ letter-spacing: 0.06em;
   height: 581px;
   padding: 40px;
 
-  text-align: center;
-
   transform: translate(-50%, -50%) scale(0.9);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -804,12 +802,16 @@ letter-spacing: 0.06em;
 }
 
 .modal-title-text {
-  font-weight: 700;
-font-size: 20px;
-line-height: 1.15;
-letter-spacing: 0.03em;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
 
-color: var(--primary-text-color)
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+
+  color: var(--primary-text-color)
 }
 
 .close {
@@ -825,8 +827,179 @@ color: var(--primary-text-color)
   cursor: pointer;
 }
 
-.close-button:hover {
+.close-button {
+  fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close:hover .close-button,
+.close:focus .close-button{
   fill: var(--active-text-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-text {
+  position: absolute;
+  top: -16px;
+  left: 0;
+
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: var(--secondery-text-color);
+}
+
+.modal-form {
+  margin-bottom: 30px;
+}
+
+.modal-label {
+  position: relative;
+
+  display: block;
+
+  margin-bottom: 28px;
+}
+
+
+.modal-label:focus-within .modal-icon {
+  fill: var(--active-text-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+
+  padding: 12px 12px 12px 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus,
+.textarea:focus {
+  outline: 1px solid var(--active-text-color);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+
+  transform: translateY(-50%);
+  fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-label-comment {
+  position: relative;
+
+  display: block;
+
+  margin-bottom: 20px;
+}
+
+.textarea {
+  width: 100%;
+  padding: 12px 16px;
+  resize: none;
+
+  color: var(--secondery-text-color);
+
+  font-size: 12px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkbox-input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.checkbox-icon {
+  display: block;
+  width: 16px;
+  height: 15px;
+
+  margin-right: 8px;
+
+  border: 2px solid var(--primary-text-color);
+  border-radius: 4px;
+}
+
+.checkbox-input:focus + .checkbox-icon {
+  outline: 1px solid var(--active-text-color);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-input:checked + .checkbox-icon {
+  border-color: var(--active-text-color);
+  background-color: var(--active-text-color);
+  background-image: url(../img/icon-check.svg);
+  background-size: contain;
+  background-origin: border-box;
+}
+
+.checkbox-text {
+  margin-right: 2px;
+
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: var(--secondery-text-color);
+}
+
+.checkbox-link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: var(--active-text-color);
+}
+
+.send {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 50px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  background-color: var(--active-text-color);
+  border-color: transparent;
+
+  cursor: pointer;
+}
+
+.send-text {
+  color: var(--text-hero);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
 }
 
 /* Сброс отступов для заголовков и абзацев */
