--- a/css/styles.css
+++ b/css/styles.css
@@ -607,7 +607,10 @@ img {
 
 .footer > .container {
   display: flex;
-  column-gap: 70px;
+}
+
+.address-box {
+  margin-right: 70px;
 }
 
 .footer {
@@ -701,7 +704,7 @@ img {
 }
 
 .subscribe {
-  margin-left: 13px;
+  margin-left: auto;
   margin-top: 12px;
 }
 
@@ -714,6 +717,8 @@ img {
   height: 50px;
   width: 358px;
   padding: 15px;
+
+  color: var(--main-background-color);
 
   background-color: var(--footer-background-color);
 
@@ -813,6 +818,8 @@ letter-spacing: 0.06em;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 
+  background-color: var(--text-hero);
+
   cursor: pointer;
 }
 
@@ -824,7 +831,6 @@ letter-spacing: 0.06em;
 .close:hover .close-button,
 .close:focus .close-button{
   fill: var(--active-text-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-text {
@@ -864,15 +870,15 @@ letter-spacing: 0.06em;
   padding: 12px 12px 12px 42px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: none;
   border-radius: 4px;
 
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus,
 .textarea:focus {
   outline: 1px solid var(--active-text-color);
-  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon {
@@ -934,11 +940,14 @@ letter-spacing: 0.06em;
 
   border: 2px solid var(--primary-text-color);
   border-radius: 4px;
+
+  outline: none;
+
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox-input:focus + .checkbox-icon {
   outline: 1px solid var(--active-text-color);
-  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox-input:checked + .checkbox-icon {
